--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "^7.6.0",
+    "history": "^4.10.1",
     "mini-css-extract-plugin": "^0.8.0",
     "moment": "2.18.1",
     "node-sass": "^4.13.0",
